# vat-filler

./: .gitignore  6mm hose connector.stl  CMakeLists.txt  README.md  dust_concentration.txt
3D_FILES/: vat_filler_probe_holder_A1.stl
AXEL's_CODE/: Config.h  LiquidSensor.cpp
DATA COLLECTION/: FILTER_TESTING.xlsx  resin_probe (simple average).txt  resin_probes (low pass + simple average).txt
DATA COLLECTION/Processing data scraper/: sketch_240412a.pde
FILLER_PCB/FILLER_PCB/: FILLER_PCB.PcbDoc  FILLER_PCB.PcbDoc.htm  FILLER_PCB.PcbLib  FILLER_PCB.PrjPcb  FILLER_PCB.PrjPcbStructure  FILLER_PCB.SchDoc  FILLER_PCB.SchLib  FILLER_PCB.html
FILLER_PCB/FILLER_PCB/__Previews/: FILLER_PCB.SchDocPreview
MENU_CODE/: MenuItem.h  art_rle.h  menu.ino
MENU_CODE/tools/: art.py  rle.py
PROTOTYPE/MOTOR_CONTROLER_TEST/: MOTOR_CONTROLER_TEST.ino  OLED_DISPLAY.h  logo_data.h  logo_data_generation.py  logo_data_light.h
menu/: Menu.cpp  Menu.h
scripts/: patch_libs.sh
src/: LiquidSensor.cpp  LiquidSensor.h  Menu.cpp  Menu.h  Menu.h.save  MenuItem.h  Pins.h  main.cpp
testing/: Book1.xlsx
testing/DATA COLLECTION/: Probes far apart.txt  probes close together.txt
testing/FUNCTION_PUMP_CONTROL/: FUNCTION_PUMP_CONTROL.ino
testing/LOW_PASS_FILTER/: LOW_PASS_FILTER.ino
testing/MOTOR_CONTROLER_TEST/sketch_may23a/: sketch_may23a.ino
testing/PUMP_CONTROL/: PUMP_CONTROL.ino
testing/Processing data scraper/: sketch.properties
